<resources>
    <string name="app_name">有云笔记</string>
    <string name="textview_hint">搜索笔记</string>
    <string name="toolbarName">ZNotes</string>
    <string name="db_name">ZNotes</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="album">相册</string>
    <string name="edit">编辑</string>
    <string name="take_pictures">拍照</string>
    <string name="choose_head_img">选择头像图片</string>
    <string name="choose_bg_img">选择背景图片</string>
    <string name="update_without_data">暂无可上传数据</string>
    <string name="is_confirm_all_update">确定上传吗?</string>
    <string name="is_confirm_del">确定删除吗?</string>
    <string name="is_confirm_cloud_del">云笔记删除之后找不回来，确定删除?</string>
    <string name="is_confirm_recycle_del">回收站删除之后找不回来，确定删除?</string>
    <string name="click_again_log_out">再点击一次退出程序</string>
    <string name="loading">正在加载…</string>
    <string name="cloud_title">云笔记</string>
    <string name="username">用户名</string>
    <string name="email">邮箱</string>
    <string name="tel">手机号</string>
    <string name="feedback">意见反馈</string>
    <string name="setting_title">设置</string>
    <string name="recycle_title">回收站</string>

    <!-- Strings related to login -->
    <string name="prompt_header">登录后可保存云笔记</string>
    <string name="prompt_log_out">确定注销吗?</string>
    <string name="prompt_forget_password">忘记密码?</string>
    <string name="prompt_username">请输入用户名</string>
    <string name="prompt_regist_email">请输入注册邮箱</string>
    <string name="prompt_email">请输入邮箱</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_old_password">请输入旧密码</string>
    <string name="prompt_new_password">请输入新密码</string>
    <string name="prompt_password_confirm">请输入密码</string>
    <string name="prompt_password_length">密码不能低于6位</string>
    <string name="prompt_password_again">请确认密码</string>
    <string name="prompt_password_update_success">密码修改成功，可以使用新密码进行登录</string>
    <string name="prompt_password_update_error">密码修改失败</string>
    <string name="action_sign_in">登录</string>
    <string name="action_update_password">修改密码</string>
    <string name="action_register">注册</string>
    <string name="action_send">发送</string>
    <string name="action_commit">确定</string>
    <string name="action_get_password">找回密码</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--model返回值-->
    <string name="update_password_success">密码修改成功</string>
    <string name="update_password_error">密码修改失败</string>
    <string name="log_out_success">注销成功</string>
    <string name="register_success">注册成功</string>
    <string name="register_error">注册失败</string>
    <string name="login_success">登录成功</string>
    <string name="login_error">登录失败</string>
    <string name="login_error_101">登录失败,用户名或密码不正确</string>
    <string name="sava_success">上传成功</string>
    <string name="sava_error">上传失败</string>
    <string name="update_success">更新成功</string>
    <string name="update_error">更新失败</string>
    <string name="sava_all_success">批量上传成功</string>
    <string name="update_all_success">批量更新成功</string>
    <string name="del_all_success">批量删除成功</string>
    <string name="del_all_error">批量删除失败</string>
    <string name="del_success">删除成功</string>
    <string name="del_error">删除失败</string>

</resources>
