<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f1"
    android:orientation="vertical"
    tools:context=".ui.activity.RegisterActivity">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/CommonMar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:maxLines="1"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/et_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:maxLines="1"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_password"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:hint="@string/prompt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_password_again"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:hint="@string/prompt_password_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </android.support.design.widget.TextInputLayout>

            <Button
                android:textSize="16sp"
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_with_shadow"
                android:text="@string/action_register"
                android:textColor="@color/white" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>
