<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.UserInfoActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/title_bg"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@color/title_bg">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@color/color_blue"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/head"
                android:src="@mipmap/default_head"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/gradient"
                android:fitsSystemWindows="true" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@mipmap/back"
                app:popupTheme="@style/PopupOverlay" >


            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/CommonMar">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:textColor="@color/color_666666"
                    android:cursorVisible="false"
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:maxLines="1"
                    android:textSize="18sp"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:textColor="@color/color_666666"
                    android:id="@+id/email"
                    android:cursorVisible="false"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:textSize="18sp"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:textColor="@color/color_666666"
                    android:id="@+id/tel"
                    android:inputType="number"
                    android:cursorVisible="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tel"
                    android:maxLines="1"
                    android:textSize="18sp"
                    />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <ImageView
                    android:layout_marginLeft="4dp"
                    android:src="@mipmap/sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/boy"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/radiobutton_sex"
                    android:text="男"
                    android:checked="true"
                    android:drawablePadding="6dp"
                    android:button="@null"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/girl"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/radiobutton_sex"
                    android:text="女"
                    android:drawablePadding="6dp"
                    android:button="@null"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </RadioGroup>

            <View
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:background="@color/color_666666"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:id="@+id/upload_ll"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="44dp">


                <TextView
                    android:textSize="16sp"
                    android:text="修改密码"
                    android:id="@+id/content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/imgview"
                    android:src="@mipmap/go"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@color/color_666666"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>



            <Button
                android:layout_marginTop="18dp"
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_blue"
                android:gravity="center"
                android:text="保存"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:id="@+id/log_out"
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_log_out"
                android:text="注销"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
